--- a/templates/index.html
+++ b/templates/index.html
@@ -661,7 +661,7 @@
                             ? 'bg-blue-500 text-white rounded-br-none user-message'
                             : 'bg-white text-gray-800 rounded-bl-none'
                             }`);
-                        messageBubble.append(`<div><img src="{{ url_for('static',filename='img/chart.png') }}" alt=""></div>`)
+                        messageBubble.append(`<div><img src="https://projectx-ak3q.onrender.com/static/img/chart.png" alt=""></div>`)
                         messageDiv.append(messageBubble);
                         loadingIndicator.before(messageDiv);
                         image_url = false
@@ -995,3 +995,4 @@
 
 
 </html>
+
